<resources>
    <string name="app_name">Music</string>
    <string name="action_settings">Settings</string>
    <string name="splash">我的音乐，我做主!</string>
    <string name="home_local_music">我的音乐</string>
    <string name="home_myfavorite">我的最爱</string>
    <string name="home_folder">文件夹</string>
    <string name="home_singer">歌手</string>
    <string name="home_albums">专辑</string>
    <string name="prompt_exit">再按一次返回键退出</string>

    <string name="album_list">专辑列表</string>
    <string name="music_list">音乐列表</string>
    <string name="favorite_list">收藏列表</string>
    <string name="folder">文件夹</string>
    <string name="artist">艺术家</string>
    <string name="playing_list">正在播放</string>
    <string name="loading">正在加载...</string>

    <string name="play_mode_normal">顺序播放</string>
    <string name="play_mode_repeat_all">列表循环</string>
    <string name="play_mode_shuffle">随机播放</string>
    <string name="play_mode_single_repeat">单曲循环</string>
    <string name="change_theme">主题背景</string>
    <string name="theme">主题背景</string>
    <string name="sleep_setting">睡眠</string>
    <string name="setting">设置</string>
    <string name="quit">退出</string>
    <string name="music_scan_title">音乐扫描</string>
    <string name="scan_start">扫描开始</string>
    <string name="scan_end">扫描完成</string>
    <string name="scaning">正在扫描</string>

    <string name="sleep_settings_prompt">计时结束后，将停止播放</string>
    <string name="sleep_settings_prompt2">%s 过后，将停止播放</string>
    <string name="sleep_settings_toast">亲，将在 %s 分钟后将停止播放</string>
    <string name="cancel_timer">计时已取消</string>
    <string name="add_favorite">取消收藏</string>
    <string name="cancel_favorite">添加收藏</string>
    <string name="add_favorite_success">收藏成功</string>
    <string name="cancel_favorite_success">取消收藏成功</string>
    <string name="set_ringtone_success">设置铃声成功</string>
    <string name="delete_music">确定要删除歌曲 %s 吗？</string>
    <string name="delete_music_success">删除歌曲 %s 成功</string>
    <string name="menu_add_favorite">添加收藏</string>
    <string name="menu_delete_music">删除歌曲</string>
    <string name="menu_set_ringtone">设为铃声</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <!--lyric-->
    <string name="downloading">正在下载...</string>
    <string name="artist_music_null">歌手和歌曲不能为空</string>

</resources>
