<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_1"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/slide_icon"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutQuit"
        android:layout_below="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutScan"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_menu_scan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/music_scan_title"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout
                android:id="@+id/layoutPlaymode"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconPlaymode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_playmode_normal" />

                <TextView
                    android:id="@+id/txtPlaymode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/play_mode_normal"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout
                android:id="@+id/layoutTheme"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_change_theme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/change_theme"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout
                android:id="@+id/layoutSleep"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_sleep_mode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/sleep_setting"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTimeLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout
                android:id="@+id/layoutSetting"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/setting"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutQuit"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/quit"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>